--- a/sys1.html
+++ b/sys1.html
@@ -708,6 +708,7 @@ function updateWaterRatio() {
 
 // 加药计算（使用精确的各系列水量）
 function do_cal() {
+  const k = 1.1;
   var ab = parseInt(document.getElementById("12").value);
   var cd = parseInt(document.getElementById("34").value);
   
