--- a/sys1.html
+++ b/sys1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+=<!DOCTYPE html>
 
 <html lang="zh-CN">
 <head>
@@ -634,7 +634,7 @@ animation: fadeInOut 2s;
   </div>
 
   <div class="footer">
-    加药加氯计算系统 v3.0 | 数据自动保存
+    加药加氯计算系统 v3.1 | 数据自动保存
   </div>
 </div>
 
