--- a/sys3.html
+++ b/sys3.html
@@ -487,7 +487,7 @@ animation: shake 0.5s;
   </div>
 
   <div class="footer">
-    药剂消耗核算系统 v2.0 | 数据自动保存
+    药剂消耗核算系统 v2.1 | 数据自动保存
   </div>
 </div>
 
@@ -517,12 +517,13 @@ function load() {
 
 // 计算（原始逻辑保持不变）
 function calc() {
-  const p1m12 = (n('p1m117') - n('p1m18') + n('p1m217') - n('p1m28')) * n('c_p1_m') / 100 * 1000;
-  const p1m34 = (n('p1m317') - n('p1m38') + n('p1m417') - n('p1m48')) * n('c_p1_m') / 100 * 1000;
+  const k = 1.1;
+  const p1m12 = (n('p1m117') - n('p1m18') + n('p1m217') - n('p1m28')) * n('c_p1_m') * k / 100 * 1000;
+  const p1m34 = (n('p1m317') - n('p1m38') + n('p1m417') - n('p1m48')) * n('c_p1_m') * k / 100 * 1000;
   const p1a12 = (n('p1a117') - n('p1a18') + n('p1a217') - n('p1a28')) * n('c_p1_a') / 100 * 1000;
   const p1a34 = (n('p1a317') - n('p1a38') + n('p1a417') - n('p1a48')) * n('c_p1_a') / 100 * 1000;
-  const p2m5 = (n('p2m5117') - n('p2m518') + n('p2m5217') - n('p2m528')) * n('c_p2_m') / 100 * 1000;
-  const p2m6 = (n('p2m6117') - n('p2m618') + n('p2m6217') - n('p2m628')) * n('c_p2_m') / 100 * 1000;
+  const p2m5 = (n('p2m5117') - n('p2m518') + n('p2m5217') - n('p2m528')) * n('c_p2_m') * k / 100 * 1000;
+  const p2m6 = (n('p2m6117') - n('p2m618') + n('p2m6217') - n('p2m628')) * n('c_p2_m') * k / 100 * 1000;
   const p2a5 = (n('p2a5117') - n('p2a518') + n('p2a5217') - n('p2a528')) * n('c_p2_a') / 100 * 1000;
   const p2a6 = (n('p2a6117') - n('p2a618') + n('p2a6217') - n('p2a628')) * n('c_p2_a') / 100 * 1000;
 
